Fix z-index tab nav panel

--- a/DTCD-WorkspaceSystem/src/styles/TabsSwitcher.scss
+++ b/DTCD-WorkspaceSystem/src/styles/TabsSwitcher.scss
@@ -47,6 +47,7 @@
     column-gap: var(--side-padding);
     background-color: var(--background_main);
     border-top: 1px solid var(--border);
+    z-index: 2040;
   }
 
   .ScrollBtn,
